--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,11 @@
 Source: opa
-Maintainer: Brian T. Smith <bsmith@systemfabricworks.com>
+Maintainer: Scibian Project <packaging@scibian.org>
 Section: utils
 Priority: extra
 Standards-Version: 3.9.8
 Homepage: http://www.intel.com
+Vcs-Git: https://github.com/scibian/opa.git
+Vcs-Browser: https://github.com/scibian/opa
 Build-Depends: debhelper (>= 10),
                ibacm,
                libexpat-dev,
