--- a/debian/control
+++ b/debian/control
@@ -20,14 +20,14 @@ Build-Depends: debhelper (>= 10),
 
 Package: libopamgt-dev
 Section: libdevel
-Architecture: linux-any
+Architecture: amd64
 Depends: libopamgt0 (=${binary:Version}),
          ${misc:Depends},
 Description: Summary: Omni-Path library development headers
  This package contains the necessary headers for opamgt development.
 
 Package: libopamgt0
-Architecture: linux-any
+Architecture: amd64
 Depends: libibumad3,
          ${misc:Depends},
          ${shlibs:Depends},
@@ -36,7 +36,7 @@ Description: Omni-Path management API library
  interface with an Omni-Path FM.
 
 Package: opa-address-resolution
-Architecture: linux-any
+Architecture: amd64
 Depends: ibacm,
          opa-basic-tools (=${binary:Version}),
          ${misc:Depends},
@@ -49,7 +49,7 @@ Description: Contains Address Resolution manager
  database exported by dsap.
 
 Package: opa-basic-tools
-Architecture: linux-any
+Architecture: amd64
 Depends: bc,
          expect,
          libexpat1,
@@ -61,7 +61,7 @@ Description: Management level tools and scripts
  Contains basic tools for fabric management necessary on all compute nodes.
 
 Package: opa-fastfabric
-Architecture: linux-any
+Architecture: amd64
 Depends: expect,
          opa-basic-tools (=${binary:Version}),
          tcl,
